syntax = "proto3";

package dousheng.video;
option go_package = "github.com/Go-To-Byte/DouSheng/video/apps/video";

// 生成代码：
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative video.proto
service video{
  rpc publish(PublishRequest) returns (PublishResponse);
  rpc publish_list(PublishListRequest) returns (PublishListResponse);
  rpc info(VideoInfoRequest) returns (VideoInfoResponse);
  rpc feed(FeedRequest) returns (FeedResponse);
}

message PublishRequest {
  int64 user_id = 1; // 用户鉴权token
  int64 video_id = 2 ; // 视频id
  string video_url = 3; // 视频数据
  string cover_url = 4; // 封面数据
  string title = 5; // 视频标题
}

message PublishResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
}

message PublishListRequest {
  int64 user_id = 1; // 用户id
}

message PublishListResponse {
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  repeated int64 video_list = 3; // 用户发布的视频列表
}

message Video {
  int64 id = 1; // 视频唯一标识
  int64 author = 2; // 视频作者信息
  string play_url = 3; // 视频播放地址
  string cover_url = 4; // 视频封面地址
  int64 favorite_count = 5; // 视频的点赞总数
  int64 comment_count = 6; // 视频的评论总数
  bool is_favorite = 7; // true-已点赞，false-未点赞
  string title = 8; // 视频标题
}

message VideoInfoRequest {
  int64 video_id = 1; // 视频唯一标识
}

message VideoInfoResponse{
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  Video video = 3; // 视频信息
}

message FeedRequest{
  optional int64 latest_time = 1;  // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
}

message FeedResponse{
  int32 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; // 返回状态描述
  int64 next_time = 3;  // 本次返回的视频中，发布最早的时间，作为下次请求时的latest_time
  repeated int64 VideoList = 4; // 视频id列表
}